# heimdall

./: .dockerignore  .gitignore  .helmignore  ARCHITECTURE.md  CACHE_CONSOLIDATION_COMPLETE.md  CACHE_CONSOLIDATION_DESIGN.md  CLAUDE.md  Cargo.toml  DNS_DIAGNOSTICS.md  DNS_PARSING_UNIFICATION.md  DOCKER_BUILD_AND_RUN.md  DOCKER_DEPLOYMENT.md  DUPLICATION_ANALYSIS_REPORT.md  Dockerfile  METALLB_ZERO_DOWNTIME.md  PERFORMANCE_ANALYSIS.md  README.md  ROADMAP.md  argocd-setup.md  build-docker.sh  build.zig  build.zig.zon  dead_code_analysis.md  demo_phase4.sh  diagnose_dns_issue.sh  docker-compose.yaml  docker-compose.yml  docker-run.sh  heimdall.toml  k8s-deployment.md  k8s-manifest.yaml  mix.exs  monitor_dns_health.sh  optimized_cache_hit_test.json  optimized_extreme_test.json  start_server.sh  start_test_server.sh  stop_server.sh  stress_test.sh  test_application_dns.sh  (+8 more)
.argocd/: application.yaml  image-updater-config.yaml
.github/: CI_TEST_CONFIGURATION.md  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
assets/: common_suffixes.txt  package-lock.json  package.json  tailwind.config.js
benches/: blocking_performance.rs  dns_parsing.rs  dns_performance.rs  regression_suite.rs  resolver_performance.rs
benchmarks/: baseline.json
blocklists/: malware-domains.txt
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: DNSSEC.md  DNS_BLOCKING.md  PHASE_4_COMPLETION_SUMMARY.md  RDATA_PARSING_STATUS.md  README.md  REPLICA_COORDINATION.md  REPLICA_COORDINATION_DETAILED.md  RFC_COMPLIANCE.md  UDP_TRUNCATION.md  git-hooks.md  metrics_fix.patch  test-best-practices.md
examples/: test_zone_loading.rs
extreme_load_results/: 01_baseline_20250615_033748.json  02_high_concurrency_200_20250615_033748.json  03_high_concurrency_500_20250615_033748.json  04_high_concurrency_1000_20250615_033748.json  05_high_qps_100_20250615_033748.json  06_high_qps_200_20250615_033748.json  07_high_qps_500_20250615_033748.json  08_extreme_5k_20250615_033748.json  09_extreme_10k_20250615_033748.json  10_extreme_20k_20250615_033748.json  11_breaking_30k_20250615_033748.json  12_breaking_50k_20250615_033748.json  13_breaking_100k_20250615_033748.json  performance_ceiling_20250615_033748.txt
k8s/: redis-deployment.yaml
lib/: heimdall_web.ex
load_test_results/: cache_hit_test.json  cache_miss_test.json
notes/: async-blocklist-loading-plan.md  dns_parser_technical_analysis.md  dnssec-completion-summary.md  extreme_performance_results.md  optimization_results.md  performance_analysis.md  phase4_rfc_compliance_progress.md  psl-deduplication-implementation.md  rfc_compliance_progress.md  security_implementation_progress.md
roadmap/: OPTIMIZATION_LOG.md  main-roadmap.md  optimization_implementation_guide.md  optimization_strategy.md  phase1_completion_report.md  phase2_completion_report.md
scripts/: PERFORMANCE_TESTING.md  check_performance.sh  demo_zone_transfer.sh  deploy-zero-downtime.sh  extreme_load_test.sh  performance_bottleneck_test.sh  profile_memory_locks.sh  profile_performance.sh  run_load_test.sh  setup-argocd.sh  setup-git-hooks.sh  test-ci-mode.sh  test-network-mode.sh  test-zero-downtime.sh
src/: cache.rs  cluster_discovery.rs  cluster_registry.rs  config.rs  config_reload.rs  constants.rs  enums.zig  error.rs  graceful_shutdown.rs  heimdall_error.rs  http_server.rs  lib.rs  main.rs  main.zig  metrics.rs  model.rs  pool.rs  prelude.rs  rate_limiter.rs  resolver.rs  server.rs  server_new.rs  server_old.rs  structs.rs  traits.rs  validation.rs
tests/: all_record_types_test.rs  authoritative_dns_test.rs  benchmark_validation.rs  blocking_tests.rs  blocking_v2_tests.rs  cache_local_backend_tests_simple.rs  cache_persistence_test.rs  cache_redis_backend_tests_simple.rs  cache_rkyv_test.rs  config_reload_tests.rs  critical_types_parsing_tests.rs  dns_parsing_tests.rs  dnssec_denial_tests.rs  dnssec_e2e_test.rs  dnssec_integration_test.rs  dnssec_parsing_tests.rs  (+32 more)
(+195 files in other folders)
