[package]
name = "heimdall"
version = "0.1.0"
edition = "2024"
default-run = "heimdall"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
bitstream-io = "4.1.0"
bytes = "1.8"
crossbeam = "0.8"
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
thiserror = "2.0"
clap = "4.0"
sysinfo = "0.35"
futures = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
governor = "0.6"
tokio-retry = "0.3"
rkyv = "0.8"
prometheus = "0.14"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
notify = "8.0"
toml = "0.8"

[dev-dependencies]
criterion = "0.6"
tempfile = "3.8"

[[bin]]
name = "heimdall"
path = "src/main.rs"

[[bin]]
name = "stress_test"
path = "src/bin/stress_test.rs"

[[bench]]
name = "dns_parsing"
harness = false
